Use URI for downloads instead of URLs
[#171813307]